[package]
name = "qe"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.4", features = ["sqlite", "retry", "extensions"] }
anyhow = "1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sqlx = "0.6.0"
tracing = "0.1.37"
log = "0.4.19"
actix-web = "4.3.1"
env_logger = "0.10.0"
futures = "0.3.28"
serde_json = "1.0.103"
reqwest = "0.11.18"
tower = "0.4.13"
skv = "0.1.2"
